--- a/css/style.scss
+++ b/css/style.scss
@@ -10,12 +10,37 @@ $darkhover: #8785f7;
 $navbarheight: 3rem;
 $nidebarwidth: 12rem;
 
+html {
+    font-size: 1em;
+}
+
 body {
     left: 0;
     top: 0;
     margin: 0px;
     padding: 0px;
+    background-color: $lightbg;
+    font-family: 'Raleway', serif;
+    font-weight: 400;
+    line-height: 1.45;
+    color: #333;
 }
+
+h1, h2, h3, h4 {
+  margin: 1.414em 0 0.5em;
+  font-weight: inherit;
+  line-height: 1.2;
+}
+
+p {margin-bottom: 1.3em;}
+
+h2 {font-size: 1.728em;}
+
+h3 {font-size: 1.44em;}
+
+h4 {font-size: 1.2em;}
+
+small, .font_small {font-size: 0.833em;}
 
 #navbar {
     position: fixed;
@@ -72,6 +97,23 @@ body {
     #pagenav {
         .pagenav-label {
             color: $fadefg;
+        }
+    }
+    figure {
+        padding: 0em;
+        margin: 0em;
+        img {
+            width: 100%;
+            padding: 0em;
+            margin: 0em;
+        }
+        figcaption {
+            h4 {
+                padding: 0em;
+                margin: 0em 0em 2em 0em;
+                font-size: 1em;
+                font-style: italic;
+            }
         }
     }
 }
