Publishing to gh-pages.

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,40 @@
+html {
+  font-size: 1em; }
+
 body {
   left: 0;
   top: 0;
   margin: 0px;
-  padding: 0px; }
+  padding: 0px;
+  background-color: #fff;
+  font-family: 'Raleway', serif;
+  font-weight: 400;
+  line-height: 1.40;
+  color: #333; }
+
+h1, h2, h3, h4 {
+  padding: 1em 0 0.5em;
+  margin: 0px;
+  font-weight: inherit;
+  line-height: 1.2; }
+
+h1.title {
+  padding-top: 0; }
+
+p {
+  margin-bottom: 1em; }
+
+h2 {
+  font-size: 1.521em; }
+
+h3 {
+  font-size: 1.322em; }
+
+h4 {
+  font-size: 1.15em; }
+
+small, .font_small {
+  font-size: 0.833em; }
 
 #navbar {
   position: fixed;
@@ -10,6 +42,7 @@ body {
   left: 0;
   z-index: 9999;
   width: 100%;
+  min-width: 60em;
   height: 3rem;
   background-color: #333; }
   #navbar a {
@@ -22,11 +55,14 @@ body {
   #navbar a:hover {
     color: #8785f7; }
 
+#mainbody {
+  margin-top: 3rem;
+  margin-left: 0em;
+  margin-right: 0em; }
+
 #content {
-  margin-top: 3.9rem;
   padding: 2em;
-  max-width: 50em;
-  margin-left: 6em; }
+  max-width: 50em; }
   #content p {
     text-align: justify; }
   #content a {
@@ -59,17 +95,19 @@ body {
       padding: 0em;
       margin: 0em 0em 2em 0em;
       font-size: 1em;
-      font-style: italic; }
+      font-style: italic;
+      font-weight: 300; }
 
 #sidebar {
-  position: fixed;
-  display: block;
-  right: 0;
-  top: 5rem;
-  z-index: 9998;
+  /* position: fixed; */
+  /* display: block; */
+  /* right: 0; */
+  /* top: 5rem; */
+  /* z-index: 9998; */
+  float: right;
   width: 12rem;
   height: 100%;
-  background-color: #fff; }
+  padding: 1em; }
   #sidebar a {
     font-size: 80%;
     color: #aaa;
