--- a/css/style.scss
+++ b/css/style.scss
@@ -149,6 +149,11 @@ small, .font_small {font-size: 0.833em;}
     a:hover {
         color: $fadehover;
     }
+    img#tamaskpapp {
+        float:left;
+        width:10em;
+        margin: 1em;
+    }
 }
 
 .date {
