--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ html {
 body {
   left: 0;
   top: 0;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   background-color: #fff;
   font-family: 'Raleway', serif;
   font-weight: 400;
@@ -14,15 +14,12 @@ body {
   color: #333; }
 
 h1, h2, h3, h4 {
-  padding: 1em 0 0.5em;
-  margin: 0px;
+  margin: 1em 0 0.5em;
   font-weight: inherit;
   line-height: 1.2; }
 
-h1.title {
-  padding-top: 0; }
-
 p {
+  margin-top: 0.5em;
   margin-bottom: 1em; }
 
 h2 {
@@ -70,7 +67,9 @@ small, .font_small {
   clear: left; }
 
 #content {
-  padding: 2em;
+  padding-top: 1em;
+  padding-left: 8em;
+  padding-right: 2em;
   max-width: 50em; }
   #content p {
     text-align: justify; }
@@ -81,7 +80,7 @@ small, .font_small {
   #content a:hover {
     color: #5a59a5; }
   #content pre {
-    padding: 0.5em;
+    margin: 0.5em;
     font-family: 'Roboto Mono', monospace; }
   #content .tags {
     overflow: hidden; }
@@ -94,14 +93,14 @@ small, .font_small {
   #content #pagenav .pagenav-label {
     color: #aaa; }
   #content figure {
-    padding: 0em;
-    margin: 0em; }
+    padding: 0;
+    margin: 0; }
     #content figure img {
       width: 100%;
-      padding: 0em;
-      margin: 0em; }
+      padding: 0;
+      margin: 0; }
     #content figure figcaption h4 {
-      padding: 0em;
+      padding: 0;
       margin: 0em 0em 2em 0em;
       font-size: 1em;
       font-style: italic;
