--- a/css/style.scss
+++ b/css/style.scss
@@ -15,8 +15,8 @@ html {
 body {
     left: 0;
     top: 0;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     background-color: $lightbg;
     font-family: 'Raleway', serif;
     font-weight: 400;
@@ -25,17 +25,15 @@ body {
 }
 
 h1, h2, h3, h4 {
-    padding: 1em 0 0.5em;
-    margin: 0px;
+    margin: 1em 0 0.5em;
     font-weight: inherit;
     line-height: 1.2;
 }
 
-h1.title {
-    padding-top: 0;
+p {
+    margin-top: 0.5em;
+    margin-bottom: 1em;
 }
-
-p {margin-bottom: 1em;}
 
 h2 {font-size: 1.521em;}
 
@@ -84,7 +82,9 @@ small, .font_small {font-size: 0.833em;}
 }
 
 #content {
-    padding: 2em;
+    padding-top: 1em;
+    padding-left: 8em;
+    padding-right: 2em;
     max-width: 50em;
     p {
         text-align: justify;
@@ -98,7 +98,7 @@ small, .font_small {font-size: 0.833em;}
         color: $lighthover;
     }
     pre {
-        padding: 0.5em;
+        margin: 0.5em;
         font-family: 'Roboto Mono', monospace;
     }
     .tags {
@@ -118,16 +118,16 @@ small, .font_small {font-size: 0.833em;}
         }
     }
     figure {
-        padding: 0em;
-        margin: 0em;
+        padding: 0;
+        margin: 0;
         img {
             width: 100%;
-            padding: 0em;
-            margin: 0em;
+            padding: 0;
+            margin: 0;
         }
         figcaption {
             h4 {
-                padding: 0em;
+                padding: 0;
                 margin: 0em 0em 2em 0em;
                 font-size: 1em;
                 font-style: italic;
