Publishing to gh-pages.

--- a/css/style.scss
+++ b/css/style.scss
@@ -137,7 +137,7 @@ small, .font_small {font-size: 0.833em;}
     }
 }
 
-`#sidebar {
+#sidebar {
     /* position: fixed; */
     /* display: block; */
     /* right: 0; */
