Publishing to gh-pages.

--- a/css/lovelace.css
+++ b/css/lovelace.css
@@ -1,5 +1,5 @@
 .highlight .hll { background-color: #ffffcc }
-.highlight  { background: #ffffff; }
+.highlight  { background: #e5e5e5; }
 .highlight .c { color: #888888; font-style: italic } /* Comment */
 .highlight .err { background-color: #a848a8 } /* Error */
 .highlight .k { color: #2838b0 } /* Keyword */
