--- a/css/style.scss
+++ b/css/style.scss
@@ -8,6 +8,29 @@ $darkbg: #333;
 $darkfg: #eee;
 $darkhover: #8785f7;
 
+$content_width: 50em;
+
+$highlight_width: 38em;
+$small_screen_width: $highlight_width + 2em;
+$medium_screen_width: $content_width;
+
+@mixin small_screen {
+  @media screen and (max-width: $small_screen_width) {
+    @content;
+  }
+}
+@mixin medium_screen {
+  @media screen and (min-width: $small_screen_width) and (max-width: $medium_screen_width) {
+    @content;
+  }
+}
+
+@mixin large_screen {
+  @media screen and (min-width: $medium_screen_width) {
+    @content;
+  }
+}
+
 html {
     font-size: 1em;
 }
@@ -42,6 +65,22 @@ h3 {font-size: 1.322em;}
 h4 {font-size: 1.15em;}
 
 small, .font_small {font-size: 0.833em;}
+
+#smallscreenwarning {
+    display: none;
+    @include small_screen {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        z-index: 9998;
+        width: 100%;
+        display: block;
+        background-color: #b22222;
+        color: #fff;
+        text-align: center;
+        float: clear;
+    }
+}
 
 #navbar {
     position: fixed;
@@ -85,7 +124,15 @@ small, .font_small {font-size: 0.833em;}
     padding-top: 1em;
     padding-left: 8em;
     padding-right: 2em;
-    max-width: 50em;
+    max-width: $content_width;
+    @include medium_screen {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+    @include small_screen {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
     p {
         text-align: justify;
     }
@@ -96,6 +143,9 @@ small, .font_small {font-size: 0.833em;}
     }
     a:hover {
         color: $lighthover;
+    }
+    .highlight {
+        min-width: $highlight_width;
     }
     pre {
         margin: 0.5em;
@@ -120,11 +170,6 @@ small, .font_small {font-size: 0.833em;}
     figure {
         padding: 0;
         margin: 0;
-        img {
-            width: 100%;
-            padding: 0;
-            margin: 0;
-        }
         figcaption {
             h4 {
                 padding: 0;
@@ -134,6 +179,15 @@ small, .font_small {font-size: 0.833em;}
                 font-weight: 300;
             }
         }
+    }
+    img {
+        max-width: 100%;
+        width: 100%;
+        @include large_screen {
+            width: 0.8 * $content_width;
+        }
+        padding: 0;
+        margin: 0;
     }
     .getcode {
         background-color: $darkbg;
