--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,8 @@ small, .font_small {
       display: none;
       position: absolute;
       background-color: #fff;
-      min-width: 20em;
+      width: 30em;
+      max-width: calc(100vw - 1em);
       box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
       right: 0;
       z-index: 1; }
