--- a/css/style.scss
+++ b/css/style.scss
@@ -116,7 +116,8 @@ small, .font_small {font-size: 0.833em;}
             display: none;
             position: absolute;
             background-color: $lightbg;
-            min-width: 20em;
+            width: 30em;
+            max-width: calc(100vw - 1em);
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             right: 0;
             z-index: 1;
