Publishing to gh-pages.

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #fff;
-  font-family: 'Raleway', serif;
+  font-family: 'Merriweather', serif;
   font-weight: 400;
   line-height: 1.40;
   color: #333; }
