--- a/css/style.scss
+++ b/css/style.scss
@@ -41,7 +41,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: $lightbg;
-    font-family: 'Raleway', serif;
+    font-family: 'Merriweather', serif;
     font-weight: 400;
     line-height: 1.40;
     color: #333;
