--- a/css/style.css
+++ b/css/style.css
@@ -133,9 +133,9 @@ small, .font_small {
       padding-right: 10%; } }
   @media screen and (max-width: 40em) {
     #content {
-      max-width: 100%;
-      padding-left: 0;
-      padding-right: 0%; } }
+      max-width: calc(100% - 1em);
+      padding-left: 0.5em;
+      padding-right: 0.5em; } }
   #content p {
     text-align: justify; }
   #content a {
