--- a/css/style.scss
+++ b/css/style.scss
@@ -178,9 +178,9 @@ small, .font_small {font-size: 0.833em;}
         padding-right: 10%;
     }
     @include small_screen {
-        max-width: 100%;
-        padding-left: 0;
-        padding-right: 0%;
+        max-width: calc(100% - 1em);
+        padding-left: 0.5em;
+        padding-right: 0.5em;
     }
     p {
         text-align: justify;
