--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ small, .font_small {
 
 #smallscreenwarning {
   display: none; }
-  @media screen and (max-width: 51em) {
+  @media screen and (max-width: 46em) {
     #smallscreenwarning {
       position: fixed;
       bottom: 0;
@@ -62,7 +62,7 @@ small, .font_small {
     display: inline-block;
     color: #eee;
     text-align: center;
-    margin: 0.5em 2em 0 2em;
+    margin: 0.5em 1.5em 0 1.5em;
     text-decoration: none; }
   #navbar a:hover {
     color: #4682b4; }
@@ -73,7 +73,7 @@ small, .font_small {
       display: inline-block;
       color: #aaa;
       text-align: center;
-      margin: 0.5em 2em 0 2em;
+      margin: 0.5em 1.5em 0 1.5em;
       text-decoration: none;
       cursor: pointer; }
     #navbar .dropdown .dropdown-content {
@@ -121,10 +121,10 @@ small, .font_small {
 
 #content {
   padding-top: 0em;
-  max-width: 50em;
-  padding-left: calc((100% - 50em) / 2);
-  padding-right: calc((100% - 50em) / 2); }
-  @media screen and (max-width: 51em) {
+  max-width: 45em;
+  padding-left: calc((100% - 45em) / 2);
+  padding-right: calc((100% - 45em) / 2); }
+  @media screen and (max-width: 46em) {
     #content {
       max-width: calc(100% - 1em);
       padding-left: 0.5em;
@@ -158,10 +158,10 @@ small, .font_small {
       font-weight: 300; }
   #content img {
     max-width: 100%;
-    width: 40em;
+    width: 36em;
     padding: 0;
     margin: 0; }
-    @media screen and (max-width: 51em) {
+    @media screen and (max-width: 46em) {
       #content img {
         width: 100%; } }
   #content .codeheader {
@@ -190,26 +190,11 @@ small, .font_small {
       padding-top: 0;
       margin-top: 0;
       font-size: 0.833em; }
-
-#sidebar {
-  float: right;
-  width: 12em;
-  height: 100%;
-  padding: 1em; }
-  #sidebar a {
-    font-size: 80%;
-    color: #aaa;
-    padding: 1px;
-    margin: 1px;
-    text-decoration: none; }
-  #sidebar a:hover {
-    color: #4682b4; }
-  #sidebar img#tamaskpapp {
-    float: left;
+  #content img#tamaskpapp {
+    float: right;
     width: 10em;
     margin: 1em; }
-
-.date {
-  color: #aaa; }
+  #content .date {
+    color: #aaa; }
 
 /*# sourceMappingURL=style.css.map */
