--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   background-color: #fff;
   color: #222;
-  font-family: 'Merriweather', serif;
+  font-family: 'Crimson Text', serif;
   font-weight: 400;
   line-height: 1.40; }
 
@@ -65,6 +65,9 @@ small, .font_small {
     text-align: center;
     margin: 0.5em 1.5em 0 1.5em;
     text-decoration: none; }
+    #navbar a img.feedicon {
+      height: 1em;
+      vertical-align: -0.1em; }
   #navbar a:hover {
     color: #4682b4; }
   #navbar .dropdown {
@@ -124,6 +127,9 @@ small, .font_small {
     text-align: center;
     margin: 0.5em 2em 0 2em;
     text-decoration: none; }
+    #navbarplaceholder a img.feedicon {
+      height: 1em;
+      vertical-align: -0.1em; }
   #navbarplaceholder .dropdown {
     position: relative;
     display: inline; }
@@ -172,8 +178,7 @@ small, .font_small {
       padding: 0;
       margin: 0em 0em 2em 0em;
       font-size: 1em;
-      font-style: italic;
-      font-weight: 300; }
+      font-style: italic; }
   #content img {
     display: block;
     max-width: 100%;
@@ -199,9 +204,13 @@ small, .font_small {
   #content pre {
     margin: 0;
     padding: 3px 8px;
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Fira Mono', monospace;
+    font-size: 0.8em;
     overflow: auto;
     background-color: #f7f7f7; }
+    #content pre code {
+      font-family: 'Fira Mono', monospace;
+      font-size: inherit; }
   #content ul.mainlist {
     list-style-type: none;
     padding-left: 0;
