--- a/css/style.scss
+++ b/css/style.scss
@@ -32,7 +32,7 @@ body {
     padding: 0;
     background-color: $lightbg;
     color: $lightfg;
-    font-family: 'Merriweather', serif;
+    font-family: 'Crimson Text', serif;
     font-weight: 400;
     line-height: 1.40;
 }
@@ -88,6 +88,10 @@ small, .font_small {font-size: 0.833em;}
         text-align: center;
         margin: 0.5em 1.5em 0 1.5em;
         text-decoration: none;
+        img.feedicon {
+            height: 1em;
+            vertical-align: -0.1em;
+        }
     }
     a:hover {
         color: $darkhover;
@@ -159,6 +163,10 @@ small, .font_small {font-size: 0.833em;}
         text-align: center;
         margin: 0.5em 2em 0 2em;
         text-decoration: none;
+        img.feedicon {
+            height: 1em;
+            vertical-align: -0.1em;
+        }
     }
     .dropdown {
         position: relative;
@@ -222,7 +230,6 @@ small, .font_small {font-size: 0.833em;}
                 margin: 0em 0em 2em 0em;
                 font-size: 1em;
                 font-style: italic;
-                font-weight: 300;
             }
         }
     }
@@ -256,9 +263,14 @@ small, .font_small {font-size: 0.833em;}
     pre {
         margin: 0;
         padding: 3px 8px;
-        font-family: 'Roboto Mono', monospace;
+        font-family: 'Fira Mono', monospace;
+        font-size: 0.8em;
         overflow: auto;
         background-color: $codebg;
+        code {
+            font-family: 'Fira Mono', monospace;
+            font-size: inherit;
+        }
     }
     ul.mainlist {
         list-style-type: none;
