--- a/css/style.scss
+++ b/css/style.scss
@@ -242,11 +242,32 @@ small, .font_small {font-size: 0.833em;}
         padding: 0;
         margin: 0 auto;
     }
+    table {
+        margin: 1em;
+    }
     .codeheader {
+        margin-top: 1em;
         background-color: $darkbg;
         color: $darkfg;
         width: 100%;
         border-radius: 0.4em 0.4em 0 0;
+        font-size: 0.833em;
+        p {
+            text-align: center;
+            padding: 3px 8px;
+            margin: 0;
+            a, a:hover {
+                background-color: $darkbg;
+                color: $darkfg;
+            }
+        }
+    }
+    .codedownload {
+        margin-top: 1em;
+        background-color: $darkbg;
+        color: $darkfg;
+        width: 100%;
+        border-radius: 0.4em;
         font-size: 0.833em;
         p {
             text-align: center;
