--- a/css/style.css
+++ b/css/style.css
@@ -241,5 +241,9 @@ small, .font_small {
     margin: 1em; }
   #content .date {
     color: #aaa; }
-
-/*# sourceMappingURL=style.css.map */
+  #content hr {
+    border: none;
+    height: 0.5px;
+    background-color: #aaa;
+    margin-top: 1em;
+    margin-bottom: 0.2em; }
