--- a/css/style.scss
+++ b/css/style.scss
@@ -309,5 +309,11 @@ small, .font_small {font-size: 0.833em;}
     .date {
         color: $fadefg;
     }
+    hr {
+        border: none;
+        height: 0.5px;
+        background-color: $fadefg;
+        margin-top: 1em;
+        margin-bottom: 0.2em;
+    }
 }
-
