--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   background-color: #fff;
   color: #222;
-  font-family: 'Crimson Text', serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 1.40; }
 
