--- a/css/style.scss
+++ b/css/style.scss
@@ -32,7 +32,7 @@ body {
     padding: 0;
     background-color: $lightbg;
     color: $lightfg;
-    font-family: 'Crimson Text', serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     line-height: 1.40;
 }
