--- a/css/style.css
+++ b/css/style.css
@@ -220,13 +220,11 @@ small, .font_small {
   #content pre {
     margin: 0;
     padding: 3px 8px;
-    font-family: 'Fira Mono', monospace;
-    font-size: 0.8em;
+    font-family: 'Roboto Mono', monospace;
     overflow: auto;
     background-color: #f7f7f7; }
-    #content pre code {
-      font-family: 'Fira Mono', monospace;
-      font-size: inherit; }
+  #content code {
+    font-family: 'Roboto Mono', monospace; }
   #content ul.mainlist {
     list-style-type: none;
     padding-left: 0;
