--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,12 @@ body {
   background-color: #fff;
   color: #222;
   font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
   line-height: 1.40; }
 
 h1, h2, h3, h4 {
   margin: 1em 0 0.5em;
-  font-weight: inherit;
+  font-family: 'Oswald', sans-serif;
+  font-weight: normal;
   line-height: 1.2; }
 
 p {
@@ -239,11 +239,18 @@ small, .font_small {
     margin: 1em; }
   #content .date {
     color: #aaa; }
-  #content hr {
-    border: none;
-    height: 0.5px;
-    background-color: #aaa;
-    margin-top: 1em;
-    margin-bottom: 0.2em; }
+  #content .footnotes {
+    font-size: 0.8em; }
+    #content .footnotes hr {
+      border: none;
+      height: 0.5px;
+      background-color: #aaa;
+      margin-top: 1.5em;
+      margin-bottom: 0.2em;
+      margin-left: 0;
+      width: 10em; }
+    #content .footnotes ol {
+      margin-top: 0.2em;
+      margin-bottom: 0.2em; }
 
 /*# sourceMappingURL=style.css.map */
