--- a/css/style.scss
+++ b/css/style.scss
@@ -33,13 +33,13 @@ body {
     background-color: $lightbg;
     color: $lightfg;
     font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
     line-height: 1.40;
 }
 
 h1, h2, h3, h4 {
     margin: 1em 0 0.5em;
-    font-weight: inherit;
+    font-family: 'Oswald', sans-serif;
+    font-weight: normal;
     line-height: 1.2;
 }
 
@@ -307,11 +307,20 @@ small, .font_small {font-size: 0.833em;}
     .date {
         color: $fadefg;
     }
-    hr {
-        border: none;
-        height: 0.5px;
-        background-color: $fadefg;
-        margin-top: 1em;
-        margin-bottom: 0.2em;
+    .footnotes {
+        hr {
+            border: none;
+            height: 0.5px;
+            background-color: $fadefg;
+            margin-top: 1.5em;
+            margin-bottom: 0.2em;
+            margin-left: 0;
+            width: 10em;
+        }
+        ol {
+            margin-top: 0.2em;
+            margin-bottom: 0.2em;
+        }
+        font-size: 0.8em;
     }
 }
