--- a/css/style.css
+++ b/css/style.css
@@ -141,9 +141,10 @@ small, .font_small {
 
 #content {
   padding-top: 0em;
-  max-width: 45em;
+  padding-bottom: 1em;
   padding-left: calc((100% - 45em) / 2);
-  padding-right: calc((100% - 45em) / 2); }
+  padding-right: calc((100% - 45em) / 2);
+  max-width: 45em; }
   @media screen and (max-width: 46em) {
     #content {
       max-width: calc(100% - 1em);
@@ -227,11 +228,12 @@ small, .font_small {
     font-family: 'Roboto Mono', monospace; }
   #content ul.mainlist {
     list-style-type: none;
-    padding-left: 0;
+    padding: 0;
+    margin: 0;
     text-align: left; }
-    #content ul.mainlist p.additionalinfo {
-      padding-top: 0;
-      margin-top: 0;
+    #content ul.mainlist li p.additionalinfo {
+      padding: 0;
+      margin: 0;
       font-size: 0.833em; }
   #content img#tamaskpapp {
     float: right;
